# ecoscope-earthranger-io-core

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dev/: mypy.sh  pytest-src.sh  pytest.sh
publish/: build.sh  push.sh
publish/recipes/release/: ecoscope-earthranger-io-core.yaml
src/ecoscope_earthranger_io_core/: arrow.py  client.py  dataframe.py  query.py  serve.py
tests/: DWH test cases - DHW PY CLI.csv  _fastapi_example.py  conftest.py  test_arrow.py  test_arrow_to_dataframe.py  test_dataframe.py  test_dwh_client.py  test_ipc.py  test_query.py
